Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-121856

qtgrpcgen do not generate C++ export files

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P1: Critical
    • 6.7.0 Beta3, 6.8.0 FF
    • 6.6, 6.7
    • GRPC
    • None
    • b75bc17c3 (dev), d7b00e804 (6.7)

    Description

      When qtgrpcgen is called as the standalone tool it's expected that it will generate the C++ exports for the client and server services. The following snippet exposes the issue:

      qt_add_protobuf(proto_lib PROTO_FILES service.proto)
      qt_add_grpc(grpc_lib PROTO_FILES service.proto)
      

      Since grpc_lib is the separate library it should have own C++ exports, that are never generated by qtgrpcgen.

      Attachments

        For Gerrit Dashboard: QTBUG-121856
        # Subject Branch Project Status CR V

        Activity

          People

            semlanik Alexey Edelev
            semlanik Alexey Edelev
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes