Add the missing generating of the C++ exports to the qtgrpcgen

Make the generating of C++ exports common for both generators.
The confilicting generation should be resolved by the tools that
running the generators. Qt CMake API handles this situation.

Fixes: QTBUG-121856
Change-Id: Ie2452f52d755ade2909107885dac774ff8678daa
Reviewed-by: Tatiana Borisova <tatiana.borisova@qt.io>
(cherry picked from commit b75bc17c3377a82c9afaa192271c2dffa9292bf6)
Reviewed-by: Alexandru Croitor <alexandru.croitor@qt.io>