tests/auto/grpcgen/data/expected_result/separate/protobuf/qtgrpc/tests/testservice_protobuftyperegistrations.cpp
@@ -1,0 +1,10 @@
+#include <QtProtobuf/qprotobufregistration.h>
+#include "qtgrpc/tests/testservice.qpb.h"
+
+namespace qtgrpc::tests {
+static QtProtobuf::ProtoTypeRegistrar ProtoTypeRegistrarSimpleStringMessage(qRegisterProtobufType<SimpleStringMessage>);
+static QtProtobuf::ProtoTypeRegistrar ProtoTypeRegistrarSimpleIntMessage(qRegisterProtobufType<SimpleIntMessage>);
+static QtProtobuf::ProtoTypeRegistrar ProtoTypeRegistrarBlobMessage(qRegisterProtobufType<BlobMessage>);
+static bool RegisterTestserviceProtobufTypes = [](){ qRegisterProtobufTypes(); return true; }();
+} // namespace qtgrpc::tests
+
